--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             </div>
             <div class="col-md-4">
                 <div class="list-group">
-                    <button type="button" data-target="#createAccount" data-toggle="modal"
+                    <button type="button" data-target="#checkBalance" data-toggle="modal"
                             class="list-group-item list-group-item-action">
                         Check Balance
                     </button>
